tests/compile-fail/generic_event_missing_const_parameter.rs
use sml::sml;

pub struct Message<T>(T);

sml! {
    MissingConst<T, const N: usize> {
        *Idle + event<Message<T>> = X,
    }
}

fn main() {}
